Changed properties retrieval, tried to resolve issue with overlapping

--- a/SofthemeClassrooms/MVC/Content/RoomsScheme/roomsScheme.css
+++ b/SofthemeClassrooms/MVC/Content/RoomsScheme/roomsScheme.css
@@ -32,16 +32,23 @@
 .line-details
 {
     display: none;
+    z-index: 9;
 }
 
 .eq-img
 {
     margin: 5px;
+    z-index: 10;
 }
 
 .draggable {
     display: block;
     position: absolute;
+}
+
+.draggable .resizeable
+{
+    display: none;
 }
 
 button {
